Fixed bulk generation of cards; Fixed creation of new card